--- a/CSharpday5/CSharpday5.csproj
+++ b/CSharpday5/CSharpday5.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Leapyear.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reversenum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
